# network-manager-openvpn-sso

./: .gitignore  Cargo.toml  PKGBUILD  README.md  install.sh  uninstall.sh
.github/: dependabot.yml
.github/workflows/: ci.yml  pages.yml  release.yml
data/: nm-openvpn-sso-service.name  org.freedesktop.NetworkManager.openvpn-sso.conf  vpn-sso-connect.desktop  vpn-sso-connect.sh
docs/: index.html  llms.txt  robots.txt  sitemap.xml
docs/plans/: 2026-02-05-plasma-nm-plugin-design.md
plasma-nm-plugin/: CMakeLists.txt  openvpnsso.cpp  openvpnsso.h  openvpnsso.ui  openvpnssoauth.cpp  openvpnssoauth.h  openvpnssowidget.cpp  openvpnssowidget.h  plasmanetworkmanagement_openvpnssoui.json
plasma-nm-plugin/include/: settingwidget.h
src/: config.rs  dbus.rs  main.rs  oauth.rs  openvpn.rs  secrets.rs
