[package]
name = "nm-openvpn-sso"
version = "0.1.0"
edition = "2021"
authors = ["Pegasus Heavy Industries LLC <pegasusheavyindustries@gmail.com>"]
license = "MIT"
description = "NetworkManager VPN plugin for OpenVPN with SSO/OAuth authentication"
repository = "https://github.com/PegasusHeavyIndustries/network-manager-openvpn-sso"

[[bin]]
name = "nm-openvpn-sso-service"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# D-Bus
zbus = { version = "5", default-features = false, features = ["tokio"] }

# HTTP server for OAuth callback
axum = "0.7"
tower = "0.4"

# Secrets/keyring
secret-service = { version = "4", features = ["rt-tokio-crypto-rust"] }

# Browser opening
open = "5"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "1"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-journald = "0.3"

# URL handling
url = "2"

# Utilities
uuid = { version = "1", features = ["v4"] }
futures = "0.3"
notify-rust = "4"

[profile.release]
lto = true
strip = true
